# melinda

./: CMakeLists.txt  Makefile.am  configure.ac  defines.h  dox  internal.c  internal.h  melinda.c  melinda.h  systeminfo.c  systeminfo.h  thread.c  thread.h  tuplespace.c  tuplespace.h
test/: CMakeLists.txt  a.out  internal_fifo_static_size.c  internal_fifo_static_size.c~  many_run.sh  thread_register.c  tuplespace_multi.c  tuplespace_simple.c
test/reference_algorithms/: scriptpoulet.pl
test/reference_algorithms/belinda/: Bank.hpp  Internal.hpp  InternalBank.hpp  Makefile  MultiTuple.cpp  MultiTuple.hpp  ThreadID.hpp  Tuple.cpp  Tuple.hpp  TupleSpace.cpp  TupleSpace.hpp  test.cpp  testtempl.cpp
test/reference_algorithms/dci-closed/: print.cc  utils.hh
test/reference_algorithms/dci-closed/.svn/: entries
test/reference_algorithms/dci-closed/.svn/text-base/: Makefile.svn-base  print.hh.svn-base  tid_list_macros.hh.svn-base
test/reference_algorithms/lcm25/: out
test/reference_algorithms/lcm25/.svn/: entries
test/reference_algorithms/lcm25/.svn/text-base/: transnum_.pl.svn-base
test/reference_algorithms/plcm_ng_quicksort/: TAGS  gmon.out
test/reference_algorithms/plcm_ng_quicksort/.svn/: entries
test/reference_algorithms/plcm_ng_quicksort/.svn/text-base/: plcm.cpp.svn-base
test/reference_algorithms/plcm_ng_quicksort/.svn/tmp/: defines.hpp.tmp  plcm.cpp.tmp
